--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
   "dependencies": {
     "@astrojs/react": "4.4.2",
     "@astrojs/sitemap": "3.6.0",
+    "@custom-react-hooks/use-element-size": "1.5.1",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "alpha-sort": "5.0.0",
     "astro": "5.16.2",
     "framer-motion": "11.5.4",
+    "motion": "12.23.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "5.0.1"
+    "react-icons": "5.0.1",
+    "react-use-measure": "2.1.7"
   },
   "devDependencies": {
     "@commitlint/cli": "18.4.4",
